# QML_DEMO

./: .gitignore  CMakeLists.txt  QtUiDemo.pro  README.md  build.bat  build_simple.bat  deploy.bat  main.cpp  mainwindow.cpp  mainwindow.h  qml_resources.qrc  run.bat  widgetsdemo.cpp  widgetsdemo.h  使用指南.md
qml/: QmlDemo.qml  QuickDemo.qml
